peac_dev/force-app/main/default/objects/Azure_Blob_Storage_Setting__c/Azure_Blob_Storage_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Azure Blob Storage Setting for Dealer Portal</description>
    <label>Azure_Blob_Storage_Setting</label>
</CustomObject>