peac_dev/force-app/main/default/objects/Azure_Blob_Storage_Setting__c/fields/Logs_URL__c.field-meta.xml
<CustomField>
    <fullName>Logs_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Logs URL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>