peac_dev/force-app/main/default/objects/Azure_Blob_Storage_Setting__c/fields/MISC_Storage_Container__c.field-meta.xml
<CustomField>
    <fullName>MISC_Storage_Container__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MISC Storage Container</label>
    <length>250</length>
    <type>Text</type>
</CustomField>