peac_dev/force-app/main/default/objects/Azure_Blob_Storage_Setting__c/fields/Storage_Key__c.field-meta.xml
<CustomField>
    <fullName>Storage_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Storage Key</label>
    <length>250</length>
    <type>Text</type>
</CustomField>